MDEV-15010: Wrong Seconds_Behind_Master when only starting the SQL_Thread

Problem:
=======
When I run replication normally, I get a value in "Seconds_Behind_Master" from
"SHOW SLAVE STATUS". However, when I run only the SQL Thread (on local relay
logs that have been downloaded previously), I have "NULL" in
"Seconds_Behind_Master". I would expect to have a numeric value.

Fix:
===
Implemented following changes.
case 1: "Seconds_Behind_Master" shows 0, when SQL thread is in sync with IO
        thread and IO thread is running.
case 2: "Seconds_Behind_Master" reports NULL, when SQL thread is in sync with
        IO thread and IO thread is stopped.
case 3: "Seconds_Behind_Master" reports NULL, when SQL thread is stopped while
        IO thread is up and running.
case 4: "Seconds_Behind_Master" reports a valid numerical value when IO thread
        is stopped and SQL thread is consuming existing relay log.